Fix some layout issues in the main page

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,11 @@ html, body {
 header {
   background-color: var(--clr-2);
   text-align: center;
-  padding-top: 1.5rem;
+  padding-top: 1rem;
+}
+
+header h1 {
+  font-size: 2.5rem;
 }
 
 ul {
@@ -25,7 +29,7 @@ ul {
 
 nav ul {
   display: flex;
-  gap: 4rem;
+  gap: 6rem;
   justify-content: center;
 }
 
@@ -33,7 +37,16 @@ ul button {
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  outline: 2px solid transparent;
+  outline-offset: 5px;
+  transition: outline-color 0.3s ease, outline-offset 0.3s ease;
+}
+
+ul button:hover {
+  outline-color: black;
+  outline-offset: 0;
 }
 
 h1 {
@@ -48,11 +61,12 @@ p {
   display: flex;
   align-items: center;
   background-color: var(--main-color);
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 }
 
 .main-page {
   display: flex;
+  align-items: center;
   gap: 2rem;
   height: 75vh;
   background-color: var(--clr-3);
@@ -64,8 +78,7 @@ p {
 }
 
 .main-text { 
-  height: 100%;
-  margin: 8rem;
+  margin: 0 5rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -78,7 +91,9 @@ p {
 .separator {
   height: 2px;
   width: 100%;
+  flex-shrink: 0;
   background-color: rgba(0, 0, 0, 0.267);
+  margin-top: -25px;
 }
 
 .main-paragraph {
